<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF176"
    android:orientation="vertical"
    tools:context=".Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/topbar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:background="#FFF176"
                android:elevation="5sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:src="@drawable/share" />

                <TextView
                    android:id="@+id/ebd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/mavaenprofont"
                    android:gravity="center"
                    android:text="Education Online BD"
                    android:textColor="#3C3C3C"
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/notification"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:rotation="30"
                    android:src="@drawable/notification" />


            </LinearLayout>


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieb"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_below="@id/topbar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-20sp"
                android:background="#FFFFFF"
                android:paddingBottom="120dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/educationlottie" />


            <LinearLayout
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lottieb"
                android:layout_marginStart="40dp"
                android:layout_marginTop="-110dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/curvedbg"
                android:backgroundTint="@color/white"
                android:elevation="8sp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">

                <Button
                    android:id="@+id/result"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:backgroundTint="#8BC34A"
                    android:padding="10dp"
                    android:text="@string/SeeResult"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/apply"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:backgroundTint="#00BCD4"
                    android:padding="10dp"
                    android:text="@string/Apply"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/college"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#6C6C6C"
                    android:padding="10dp"
                    android:text="@string/Colleges"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/onnanno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/group"
                android:layout_marginTop="25dp"
                android:background="#FFFFFF"
                android:elevation="10dp"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/others"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:scrollbars="none">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:paddingBottom="5dp">


                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/donation"
                                android:layout_width="90dp"
                                android:layout_height="100dp"
                                android:layout_marginStart="12dp"
                                android:layout_marginBottom="5dp"
                                android:backgroundTint="#FFFBD6"
                                app:cardCornerRadius="8dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:orientation="vertical">


                                    <ImageView
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/donate" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/EducationTrust"
                                        android:textColor="#000000" />

                                </LinearLayout>


                            </com.google.android.material.card.MaterialCardView>


                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/birth"
                                android:layout_width="90dp"
                                android:layout_height="100dp"
                                android:layout_marginStart="12dp"
                                android:layout_marginBottom="5dp"
                                android:backgroundTint="#FFFBD6"
                                app:cardCornerRadius="8dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:orientation="vertical">


                                    <ImageView
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/birth" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/birthcertificate"
                                        android:textColor="#000000" />

                                </LinearLayout>


                            </com.google.android.material.card.MaterialCardView>

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/privacy"
                                android:layout_width="90dp"
                                android:layout_height="100dp"
                                android:layout_marginStart="12dp"
                                android:layout_marginEnd="12dp"
                                android:layout_marginBottom="5dp"
                                android:backgroundTint="#FFFBD6"
                                app:cardCornerRadius="8dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:orientation="vertical">


                                    <ImageView
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/nid" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="10dp"
                                        android:text="Privacy \n Policy"
                                        android:textColor="#000000" />

                                </LinearLayout>


                            </com.google.android.material.card.MaterialCardView>


                        </LinearLayout>


                    </HorizontalScrollView>


                </LinearLayout>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#AEEA00"
                    app:cardCornerRadius="8sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="15sp"
                        android:paddingTop="10sp"
                        android:paddingEnd="15sp"
                        android:paddingBottom="10sp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10sp"
                            android:gravity="center"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="Visit Developer"
                            android:textColor="#424242"
                            android:textSize="14sp" />

                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>